--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "sinon-chai": "~2.4.0",
     "grunt": "~0.4.1"
   },
-  "keywords": []
+  "keywords": [],
+  "dependencies": {
+    "underscore": "~1.5.2"
+  }
 }
