--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "node-state": "~1.4.1",
     "node-int64": "~0.3.0",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "bignumber.js": "~1.2.1"
   }
 }
