--- a/package.json
+++ b/package.json
@@ -35,13 +35,16 @@
     "sinon": "~1.7.3",
     "chai": "~1.7.2",
     "sinon-chai": "~2.4.0",
-    "grunt": "~0.4.1"
+    "grunt": "~0.4.1",
+    "coffeelint": "~1.0.2",
+    "grunt-coffeelint": "0.0.8"
   },
   "keywords": [],
   "dependencies": {
     "node-state": "~1.4.1",
     "node-int64": "~0.3.0",
     "underscore": "~1.5.2",
-    "bignumber.js": "~1.2.1"
+    "bignumber.js": "~1.2.1",
+    "moment": "~2.4.0"
   }
 }
