Writer now doesn't use lookupd
* Updated README to remove Writer options and use just host / port pair
* Refactoring of NSQDConnection and ConnectionState to remove hideous
`isReady` parameter
* Writer now just allows directly connecting to an nsqd. No more
discovery via lookupd.
* Added nock dependency
* Added tests for lookupd module

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "grunt": "~0.4.1",
     "coffeelint": "~1.0.2",
     "grunt-coffeelint": "0.0.8",
-    "coffee-script": "~1.6.3"
+    "coffee-script": "~1.6.3",
+    "nock": "~0.27.1"
   },
   "keywords": [],
   "dependencies": {
