--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "email": "dudley.carr@gmail.com"
   },
   "keywords": [
-    "nsq", "nsq client", "nsqjs", "distributed messaging", "messaging",
-    "task", "task management"
+    "nsq",
+    "nsq client",
+    "nsqjs",
+    "distributed messaging",
+    "messaging",
+    "task",
+    "task management"
   ],
   "repository": {
     "type": "git",
@@ -54,7 +59,6 @@
     "underscore": "~1.5.2",
     "bignumber.js": "~1.2.1",
     "moment": "~2.4.0",
-    "async": "~0.2.9",
     "request": "~2.30.0"
   }
 }
