--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "underscore": "~1.5.2",
     "bignumber.js": "~1.2.1",
     "moment": "~2.4.0",
-    "request": "~2.30.0"
+    "request": "~2.30.0",
+    "snappystream": "^0.1.0",
+    "async": "^0.9.0"
   }
 }
