--- a/package.json
+++ b/package.json
@@ -40,18 +40,20 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
+    "chai": "~1.7.2",
+    "coffee-errors": "^0.8.6",
+    "coffee-script": "~1.6.3",
+    "coffeelint": "~1.0.2",
+    "grunt": "~0.4.1",
+    "grunt-coffeelint": "0.0.8",
     "grunt-contrib-coffee": "~0.7",
     "grunt-contrib-watch": "~0.5.1",
     "grunt-simple-mocha": "~0.4.0",
     "mocha": "~1.9.0",
+    "nock": "~0.27.1",
     "sinon": "~1.7.3",
-    "chai": "~1.7.2",
     "sinon-chai": "~2.4.0",
-    "grunt": "~0.4.1",
-    "coffeelint": "~1.0.2",
-    "grunt-coffeelint": "0.0.8",
-    "coffee-script": "~1.6.3",
-    "nock": "~0.27.1"
+    "temp": "^0.8.0"
   },
   "dependencies": {
     "node-state": "~1.4.1",
@@ -60,7 +62,7 @@
     "bignumber.js": "~1.2.1",
     "moment": "~2.4.0",
     "request": "~2.30.0",
-    "snappystream": "^0.1.0",
+    "snappystream": "0.3.0",
     "async": "^0.9.0"
   }
 }
