--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "grunt-simple-mocha": "~0.4.0",
     "mocha": "~1.9.0",
     "nock": "~0.27.1",
+    "should": "^4.0.4",
     "sinon": "~1.7.3",
     "sinon-chai": "~2.4.0",
     "temp": "^0.8.0"
