--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ node_js:
   - "0.10"
 before_script:
   - npm install -g grunt-cli
-  - wget "https://github.com/bitly/nsq/releases/download/v0.2.28/nsq-0.2.28.linux-amd64.go1.2.1.tar.gz"
-  - tar zvxf "nsq-0.2.28.linux-amd64.go1.2.tar.gz"
-  - export PATH="$PATH:./nsq-0.2.28.linux-amd64.go1.2/bin"
+  - wget "https://github.com/bitly/nsq/releases/download/v0.2.31/nsq-0.2.31.linux-amd64.go1.2.2.tar.gz"
+  - tar zvxf "nsq-0.2.31.linux-amd64.go1.2.2"
+  - export PATH="$PATH:./nsq-0.2.31.linux-amd64.go1.2.2/bin"
