--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ node_js:
   - "0.10"
 before_script:
   - npm install -g grunt-cli
-  - wget "https://github.com/bitly/nsq/releases/download/v0.2.31/nsq-0.2.31.linux-amd64.go1.2.2.tar.gz"
-  - tar zvxf "nsq-0.2.31.linux-amd64.go1.2.2.tar.gz"
-  - export PATH="$PATH:./nsq-0.2.31.linux-amd64.go1.2.2/bin"
+  - wget "https://s3.amazonaws.com/bitly-downloads/nsq/nsq-0.3.0.linux-amd64.go1.3.3.tar.gz"
+  - tar zvxf "nsq-0.3.0.linux-amd64.go1.3.3.tar.gz"
+  - export PATH="$PATH:./nsq-0.3.0.linux-amd64.go1.3.3/bin"
