--- a/package.json
+++ b/package.json
@@ -57,13 +57,14 @@
     "temp": "^0.8.0"
   },
   "dependencies": {
-    "node-state": "~1.4.1",
-    "node-int64": "~0.3.0",
-    "underscore": "~1.5.2",
+    "async": "^0.9.0",
     "bignumber.js": "~1.2.1",
+    "debug": "^2.1.0",
     "moment": "~2.4.0",
+    "node-int64": "~0.3.0",
+    "node-state": "~1.4.1",
     "request": "~2.30.0",
     "snappystream": "0.3.0",
-    "async": "^0.9.0"
+    "underscore": "~1.5.2"
   }
 }
