--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nsqjs",
   "description": "NodeJS client for NSQ",
-  "version": "0.6.3",
+  "version": "0.7.0",
   "homepage": "https://github.com/dudleycarr/nsqjs",
   "author": {
     "name": "Dudley Carr",
@@ -10,6 +10,7 @@
   "keywords": [
     "nsq",
     "nsq client",
+    "nsq client official",
     "nsqjs",
     "distributed messaging",
     "messaging",
