--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build": "coffee --bare --compile --output lib src/*.coffee",
     "prepublish": "coffee --bare --compile --output lib src/*.coffee",
     "postpublish": "rm -rf lib",
-    "test": "grunt test"
+    "test": "node_modules/.bin/grunt test"
   },
   "engines": {
     "node": ">= 0.10.0"
@@ -45,6 +45,7 @@
     "coffee-script": "~1.6.3",
     "coffeelint": "~1.0.2",
     "grunt": "~0.4.1",
+    "grunt-cli": "^0.1.13",
     "grunt-coffeelint": "0.0.8",
     "grunt-contrib-coffee": "~0.7",
     "grunt-contrib-watch": "~0.5.1",
