--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nsqjs",
   "description": "NodeJS client for NSQ",
-  "version": "0.7.12",
+  "version": "0.7.13",
   "homepage": "https://github.com/dudleycarr/nsqjs",
   "author": {
     "name": "Dudley Carr",
@@ -44,27 +44,27 @@
     "coffee-errors": "^0.8.6",
     "coffee-script": "~1.6.3",
     "coffeelint": "~1.0.2",
-    "grunt": "~0.4.1",
-    "grunt-cli": "^0.1.13",
-    "grunt-coffeelint": "0.0.8",
-    "grunt-contrib-coffee": "~0.7",
-    "grunt-contrib-watch": "~0.5.1",
-    "grunt-mocha-cli": "^1.9.0",
-    "mocha": "~1.9.0",
+    "grunt": "^1.0.0",
+    "grunt-cli": "^1.2",
+    "grunt-coffeelint": "0.0.16",
+    "grunt-contrib-coffee": "^1.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-mocha-cli": "^3.0.0",
+    "mocha": "^3.2",
     "nock": "~0.27.1",
-    "should": "^4.0.4",
+    "should": "^11.1.2",
     "sinon": "~1.7.3",
     "temp": "^0.8.0"
   },
   "dependencies": {
-    "async": "^0.9.0",
+    "async": "^2.1.4",
     "bignumber.js": "~1.2.1",
-    "debug": "^2.1.0",
-    "moment": "~2.4.0",
+    "debug": "^2.6.0",
+    "moment": "^2.17.1",
     "node-int64": "~0.3.0",
-    "node-state": "~1.4.1",
-    "request": "~2.64.0",
-    "snappystream": "^0.3.3",
+    "node-state": "~1.4.4",
+    "request": "^2.79.0",
+    "snappystream": "^0.3.4",
     "underscore": "~1.5.2"
   }
 }
