--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
   - TRAVIS_NODE_VERSION="0.12"
   - TRAVIS_NODE_VERSION="iojs"
   - TRAVIS_NODE_VERSION="4"
+  - TRAVIS_NODE_VERSION="6"
 language: cpp
 install:
   - rm -rf ~/.nvm
