--- a/package.json
+++ b/package.json
@@ -30,26 +30,17 @@
       "url": "https://github.com/dudleycarr/nsqjs/blob/master/LICENSE-MIT"
     }
   ],
-  "main": "lib/nsq",
   "scripts": {
-    "build": "coffee --bare --compile --output lib src/*.coffee",
-    "prepublish": "coffee --bare --compile --output lib src/*.coffee",
-    "postpublish": "rm -rf lib",
-    "test": "node_modules/.bin/grunt test"
+    "test": "mocha --compilers js:babel-core/register"
   },
+  "main": "lib/nsq",
   "engines": {
     "node": ">= 0.10.0"
   },
   "devDependencies": {
-    "coffee-errors": "^0.8.6",
-    "coffee-script": "~1.6.3",
-    "coffeelint": "~1.0.2",
-    "grunt": "^1.0.0",
-    "grunt-cli": "^1.2",
-    "grunt-coffeelint": "0.0.16",
-    "grunt-contrib-coffee": "^1.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-mocha-cli": "^3.0.0",
+    "babel-core": "^6.23.1",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
     "mocha": "^3.2",
     "nock": "~0.27.1",
     "should": "^11.1.2",
@@ -58,6 +49,7 @@
   },
   "dependencies": {
     "async": "^2.1.4",
+    "babel-polyfill": "^6.23.0",
     "bignumber.js": "~1.2.1",
     "debug": "^2.6.0",
     "moment": "^2.17.1",
