--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nsqjs",
   "description": "NodeJS client for NSQ",
-  "version": "0.7.13",
+  "version": "1.0.0",
   "homepage": "https://github.com/dudleycarr/nsqjs",
   "author": {
     "name": "Dudley Carr",
@@ -32,7 +32,7 @@
   ],
   "scripts": {
     "build": "babel src -d build",
-    "lint": "standard --fix --verbose | snazzy",
+    "lint": "eslint src/ test/ --fix",
     "test": "mocha --compilers js:babel-core/register"
   },
   "standard": {
@@ -50,6 +50,10 @@
     "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "eslint": "^3.17.1",
+    "eslint-config-airbnb-base": "^11.1.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-mocha": "^4.8.0",
     "mocha": "^3.2",
     "nock": "~0.27.1",
     "should": "^11.1.2",
