--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   ],
   "scripts": {
     "build": "babel src -d build",
-    "lint": "eslint src/ test/ --fix",
+    "format": "prettier --single-quote --trailing-comma --write \"{src,test}/**/*.js\"",
     "test": "mocha --compilers js:babel-core/register"
   },
   "standard": {
@@ -47,19 +47,12 @@
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
-    "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
-    "eslint": "^3.17.1",
-    "eslint-config-airbnb-base": "^11.1.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-mocha": "^4.8.0",
     "mocha": "^3.2",
     "nock": "~0.27.1",
     "should": "^11.1.2",
     "sinon": "~1.7.3",
-    "snazzy": "^6.0.0",
-    "standard": "^9.0.1",
     "temp": "^0.8.0"
   },
   "dependencies": {
@@ -70,6 +63,7 @@
     "moment": "^2.17.1",
     "node-int64": "~0.3.0",
     "node-state": "~1.4.4",
+    "prettier": "^0.22.0",
     "request": "^2.79.0",
     "snappystream": "^0.3.4",
     "underscore": "~1.5.2"
