--- a/package.json
+++ b/package.json
@@ -33,15 +33,10 @@
   "scripts": {
     "build": "babel src -d build",
     "format": "prettier --single-quote --write \"{src,test}/**/*.js\"",
-    "test": "mocha --compilers js:babel-core/register"
+    "test": "mocha --compilers js:babel-core/register",
+    "install": "npm run build"
   },
-  "standard": {
-    "parser": "babel-eslint",
-    "env": {
-      "mocha": true
-    }
-  },
-  "main": "lib/nsq",
+  "main": "build/nsq",
   "engines": {
     "node": ">= 0.10.0"
   },
@@ -51,6 +46,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "mocha": "^3.2",
     "nock": "~0.27.1",
+    "prettier": "^0.22.0",
     "should": "^11.1.2",
     "sinon": "~1.7.3",
     "temp": "^0.8.0"
@@ -63,7 +59,6 @@
     "moment": "^2.17.1",
     "node-int64": "~0.3.0",
     "node-state": "~1.4.4",
-    "prettier": "^0.22.0",
     "request": "^2.79.0",
     "snappystream": "^0.3.4",
     "underscore": "~1.5.2"
