--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.0",
     "babel-core": "^6.23.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
