--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-config-prettier": "^1.6.0",
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-import-order": "^2.1.4",
     "mocha": "^3.2",
     "nock": "~0.27.1",
     "prettier": "^0.22.0",
