Upgrade to es6 (#128)
* :coffee:->es6

* Fix some style inconsistencies

* Further linting

* Remove weird initClass method

* Fix imports

* Fix unnamed function

* Lint readerrdy test

* Lint reader test

* Lint nsqd connection test

* Lint message test

* Lint integratino test

* Lint framebuffer test

* Switch to airbnb eslint

* Add .eslintrc

* Use prettier instead

* Review src/backofftimer

* Review src/config.js

* Review config again

* Review buffer again

* Review src/lookupd

* Format a few files

* Review src/message.js

* Review nsqdconnection

* Fix prettier args

* Review reader

* Review src/readerrdy

* Review src/roundrobin

* Review src/wire

* Format src/wire

* Review src/writer

* Remove trailing-comma style

* Ignore build dir

* Update package.json

* Fix the tests

I needed to add the babel-cli.

* Fix babel build in production

* Fix export to work with node.js

* Lint all the things

After a bit of back and forth, I decided it was best
to lint the project. Given that it's open source, I chose
a set of pretty strict conventions by Google. I especially
like the restrictions around JSDoc.

* Lint imports

The overall order of the imports was getting out of control. This
commit wrangles them into some semblance of order at least.

* Fix the test imports

* Fix the script hooks

* Add linting to travis

* Remove linting from the travis build

Babel can't run in the pre node 4.X so this won't work. I'll need
another travis test before this can work.

* Remove deprecated plugin

* Attempt to fix the tests

* Incorporate the fixes from #127

Includes fixes for nsq 1.0.0 compatibility.

* Minor version bump.

Since there's no functional changes here, I'm just
going to do a minor bump.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nsqjs",
   "description": "NodeJS client for NSQ",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "homepage": "https://github.com/dudleycarr/nsqjs",
   "author": {
     "name": "Dudley Carr",
@@ -30,34 +30,39 @@
       "url": "https://github.com/dudleycarr/nsqjs/blob/master/LICENSE-MIT"
     }
   ],
-  "main": "lib/nsq",
   "scripts": {
-    "build": "coffee --bare --compile --output lib src/*.coffee",
-    "prepublish": "coffee --bare --compile --output lib src/*.coffee",
-    "postpublish": "rm -rf lib",
-    "test": "node_modules/.bin/grunt test"
+    "build": "babel src -d build",
+    "format": "prettier --single-quote --trailing-comma es5 --write \"{src,test}/**/*.js\"",
+    "lint": "eslint src",
+    "test": "mocha --compilers js:babel-core/register",
+    "prepublish": "npm run build",
+    "postpublish": "rm -rf build"
   },
+  "main": "build/nsq",
   "engines": {
     "node": ">= 0.10.0"
   },
   "devDependencies": {
-    "coffee-errors": "^0.8.6",
-    "coffee-script": "^1.12.2",
-    "coffeelint": "~1.0.2",
-    "grunt": "^1.0.0",
-    "grunt-cli": "^1.2",
-    "grunt-coffeelint": "0.0.16",
-    "grunt-contrib-coffee": "^1.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-mocha-cli": "^3.0.0",
+    "babel-eslint": "^7.2.1",
+    "eslint": "^3.19.0",
+    "eslint-config-google": "^0.7.1",
+    "eslint-config-prettier": "^1.6.0",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-import": "^2.2.0",
     "mocha": "^3.2",
     "nock": "~0.27.1",
+    "prettier": "^0.22.0",
     "should": "^11.1.2",
     "sinon": "~1.7.3",
     "temp": "^0.8.0"
   },
   "dependencies": {
     "async": "^2.1.4",
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.23.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
     "bignumber.js": "~1.2.1",
     "debug": "^2.6.0",
     "moment": "^2.17.1",
