--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nsqjs",
   "description": "NodeJS client for NSQ",
-  "version": "0.8.1",
+  "version": "0.8.1-alpha.3",
   "homepage": "https://github.com/dudleycarr/nsqjs",
   "author": {
     "name": "Dudley Carr",
@@ -34,7 +34,7 @@
     "build": "babel src -d build",
     "format": "prettier --single-quote --trailing-comma es5 --write \"{src,test}/**/*.js\"",
     "lint": "eslint src",
-    "test": "mocha --compilers js:babel-core/register",
+    "test": "nyc mocha --compilers js:babel-core/register",
     "prepublish": "npm run build",
     "postpublish": "rm -rf build"
   },
@@ -43,7 +43,12 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.23.1",
     "babel-eslint": "^7.2.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
     "eslint": "^3.19.0",
     "eslint-config-google": "^0.7.1",
     "eslint-config-prettier": "^1.6.0",
@@ -51,6 +56,7 @@
     "eslint-plugin-import": "^2.2.0",
     "mocha": "^3.2",
     "nock": "~0.27.1",
+    "nyc": "^10.3.0",
     "prettier": "^0.22.0",
     "should": "^11.1.2",
     "sinon": "~1.7.3",
@@ -58,11 +64,6 @@
   },
   "dependencies": {
     "async": "^2.1.4",
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.23.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
     "bignumber.js": "~1.2.1",
     "debug": "^2.6.0",
     "moment": "^2.17.1",
@@ -71,5 +72,8 @@
     "request": "^2.79.0",
     "snappystream": "^0.3.4",
     "underscore": "~1.5.2"
-  }
+  },
+  "files": [
+    "build"
+  ]
 }
