--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-cli": "^6.24.0",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.2.1",
+    "babel-plugin-array-includes": "^2.0.3",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
