--- a/package.json
+++ b/package.json
@@ -2,74 +2,55 @@
   "name": "nsqjs",
   "description": "NodeJS client for NSQ",
   "version": "0.8.1",
-  "homepage": "https://github.com/dudleycarr/nsqjs",
   "author": {
     "name": "Dudley Carr",
     "email": "dudley.carr@gmail.com"
   },
-  "keywords": [
-    "nsq",
-    "nsq client",
-    "nsq client official",
-    "nsqjs",
-    "distributed messaging",
-    "messaging",
-    "task",
-    "task management"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/dudleycarr/nsqjs.git"
-  },
   "bugs": {
-    "url": "https://github.com/dudleycarr/nsqjs/issues"
+    "url": "https://github.com/npm/nsqjs/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/dudleycarr/nsqjs/blob/master/LICENSE-MIT"
-    }
-  ],
-  "scripts": {
-    "build": "babel src -d build",
-    "format": "prettier --single-quote --trailing-comma es5 --write \"{src,test}/**/*.js\"",
-    "lint": "eslint src",
-    "test": "mocha --compilers js:babel-core/register",
-    "prepublish": "npm run build",
-    "postpublish": "rm -rf build"
-  },
-  "main": "build/nsq",
-  "engines": {
-    "node": ">= 0.10.0"
+  "dependencies": {
+    "async": "^2.1.4",
+    "bignumber.js": "~1.2.1",
+    "debug": "^2.6.0",
+    "lodash": "~4.17.4",
+    "moment": "^2.17.1",
+    "node-int64": "~0.3.0",
+    "node-state": "~1.4.4",
+    "request": "^2.79.0",
+    "snappystream": "^0.3.4"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.1",
-    "eslint": "^3.19.0",
-    "eslint-config-google": "^0.7.1",
-    "eslint-config-prettier": "^1.6.0",
-    "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-import": "^2.2.0",
     "mocha": "^3.2",
     "nock": "~0.27.1",
     "prettier": "^0.22.0",
     "should": "^11.1.2",
     "sinon": "~1.7.3",
+    "standard": "~10.0.2",
     "temp": "^0.8.0"
   },
-  "dependencies": {
-    "async": "^2.1.4",
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.23.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "bignumber.js": "~1.2.1",
-    "debug": "^2.6.0",
-    "moment": "^2.17.1",
-    "node-int64": "~0.3.0",
-    "node-state": "~1.4.4",
-    "request": "^2.79.0",
-    "snappystream": "^0.3.4",
-    "underscore": "~1.5.2"
+  "engines": {
+    "node": ">= 6.0.0"
+  },
+  "homepage": "https://github.com/dudleycarr/nsqjs",
+  "keywords": [
+    "distributed messaging",
+    "messaging",
+    "nsq",
+    "nsq client",
+    "nsqjs",
+    "task",
+    "task management"
+  ],
+  "license": "MIT",
+  "main": "build/nsq",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/npm/nsqjs.git"
+  },
+  "scripts": {
+    "format": "prettier --single-quote --trailing-comma es5 --write \"{src,test}/**/*.js\"",
+    "lint": "standard",
+    "test": "mocha -R spec -b"
   }
 }
