--- a/package.json
+++ b/package.json
@@ -31,19 +31,15 @@
     }
   ],
   "scripts": {
-    "build": "babel src -d build",
     "format": "prettier --single-quote --trailing-comma es5 --write \"{src,test}/**/*.js\"",
     "lint": "eslint src",
-    "test": "mocha --compilers js:babel-core/register",
-    "prepublish": "npm run build",
-    "postpublish": "rm -rf build"
+    "test": "mocha"
   },
   "main": "build/nsq",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 6.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.1",
     "eslint": "^3.19.0",
     "eslint-config-google": "^0.7.1",
     "eslint-config-prettier": "^1.6.0",
@@ -58,11 +54,6 @@
   },
   "dependencies": {
     "async": "^2.1.4",
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.23.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
     "bignumber.js": "~1.2.1",
     "debug": "^2.6.0",
     "moment": "^2.17.1",
