Switch to lodash
* Remove Underscore
* Add Lodash
* Change from underscore methods to lodash methods where applicable.

--- a/package.json
+++ b/package.json
@@ -56,11 +56,11 @@
     "async": "^2.1.4",
     "bignumber.js": "~1.2.1",
     "debug": "^2.6.0",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "node-int64": "~0.3.0",
     "node-state": "~1.4.4",
     "request": "^2.79.0",
-    "snappystream": "^0.3.4",
-    "underscore": "~1.5.2"
+    "snappystream": "^0.3.4"
   }
 }
