--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lint": "eslint src",
     "test": "mocha"
   },
-  "main": "build/nsq",
+  "main": "lib/nsq",
   "engines": {
     "node": ">= 6.0.0"
   },
