Added close method to nsqdconnection
* Call close instead of destroy to initiate a close of the connection
* Send CLS command to nsqd when closing
* Use a different nsqd instance for each integration test
* Better beforeEach and afterEach

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "scripts": {
     "format": "prettier --single-quote --trailing-comma es5 --write \"{lib,test}/**/*.js\"",
     "lint": "eslint lib",
-    "test": "mocha -R spec"
+    "test": "mocha -R spec -b"
   },
   "main": "lib/nsq",
   "engines": {
