--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ before_install:
   - npm install -g npm@5
   - npm install -g greenkeeper-lockfile@1
 install:
-  - wget "https://s3.amazonaws.com/bitly-downloads/nsq/nsq-0.3.8.linux-amd64.go1.6.2.tar.gz"
-  - tar zvxf "nsq-0.3.8.linux-amd64.go1.6.2.tar.gz"
-  - export PATH="$PATH:./nsq-0.3.8.linux-amd64.go1.6.2/bin"
+  - wget "https://s3.amazonaws.com/bitly-downloads/nsq/nsq-1.0.0-compat.linux-amd64.go1.8.tar.gz"
+  - tar zvxf "nsq-1.0.0-compat.linux-amd64.go1.8.tar.gz"
+  - export PATH="$PATH:./nsq-1.0.0-compat.linux-amd64.go1.8/bin"
 before_script: greenkeeper-lockfile-update
 script: npm install-test
 after_script: greenkeeper-lockfile-upload
