--- a/package.json
+++ b/package.json
@@ -40,22 +40,22 @@
     "node": ">= 6.0.0"
   },
   "devDependencies": {
-    "mocha": "^5.0.0",
-    "nock": "~10.0.4",
-    "prettier": "^1.15.3",
-    "should": "^13.0.0",
-    "sinon": "~6.0.1",
-    "standard": "^12.0.0",
+    "mocha": "^5.2.0",
+    "nock": "^10.0.6",
+    "prettier": "^1.18.2",
+    "should": "^13.2.3",
+    "sinon": "~7.4.1",
+    "standard": "^13.0.0",
     "temp": "^0.8.0"
   },
   "dependencies": {
-    "async": "^2.1.4",
-    "bignumber.js": "~8.0.1",
-    "debug": "^4.0.1",
-    "lodash": "^4.17.4",
+    "async": "^2.6.3",
+    "bignumber.js": "^8.0.2",
+    "debug": "^4.1.1",
+    "lodash": "^4.17.15",
     "node-int64": "~0.4.0",
     "node-state": "~1.4.4",
-    "request": "^2.79.0"
+    "request": "^2.88.0"
   },
   "optionalDependencies": {
     "snappystream": "^1.4.0"
