--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,2 @@
-.Python
-.template
-.vagrant
-bin
-include/python2.7
-lib/dtrace
-lib/node_modules/
-lib/python2.7
-node_modules/
-share/man
-src/node-*
-build
+node_modules
+package-lock.json
