--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "lodash": "^4.17.15",
     "node-int64": "~0.4.0",
     "node-state": "~1.4.4",
-    "request": "^2.88.0",
+    "request": "^2.88.0"
   },
   "optionalDependencies": {
     "snappystream": "^1.5.0"
