--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,22 +3,22 @@ name: CI
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 jobs:
   test:
     runs-on: ubuntu-18.04
     timeout-minutes: 10
     strategy:
       matrix:
-        node: [12,14,16]
+        node: [12,14]
     steps:
       - name: "System dependencies"
         run: |
           apt-get -q -y update
-          apt-get -q -y install libsnappy-dev
+          apt-get -q -y install libsnappy-dev python3 build-essential
       - name: "Install nsq"
         run: |
           NSQ_DIST="nsq-1.2.0.linux-amd64.go1.12.9"
