--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,8 +23,8 @@ jobs:
 
       - name: "System dependencies"
         run: |
-          apt-get -y update
-          apt-get -y install libsnappy-dev python3 build-essential
+          sudo apt-get -y update
+          sudo apt-get -y install libsnappy-dev python3 build-essential
       - name: "Install nsq"
         run: |
           NSQ_DIST="nsq-1.2.0.linux-amd64.go1.12.9"
