--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
     "async-retry": "^1.3.1",
     "debug": "^4.1.1",
     "eslint": "^7.24.0",
-    "mocha": "^9.0.0",
+    "mocha": "^9.0.3",
     "nock": "^13.0.11",
     "p-event": "^4.2.0",
     "prettier": "^2.2.1",
     "should": "^13.2.3",
-    "sinon": "~11.1.1",
+    "sinon": "^11.1.1",
     "temp": "^0.9.4"
   },
   "dependencies": {
@@ -57,6 +57,6 @@
     "node-state": "~1.4.4"
   },
   "optionalDependencies": {
-    "snappystream": "^1.5.0"
+    "snappystream": "^2.0.0"
   }
 }
