--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "scripts": {
     "format": "prettier --write \"{lib,test}/**/*.js\"",
     "lint": "eslint lib test",
-    "test": "mocha -R spec -b"
+    "test": "mocha -R spec -b",
+    "prepare": "husky install"
   },
   "main": "lib/nsq",
   "engines": {
@@ -43,6 +44,7 @@
     "async-retry": "^1.3.1",
     "debug": "^4.1.1",
     "eslint": "^8.10.0",
+    "husky": "^8.0.1",
     "mocha": "^10.0.0",
     "nock": "^13.0.11",
     "p-event": "^4.2.0",
