--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,11 +9,11 @@ on:
       - main
 jobs:
   test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     timeout-minutes: 10
     strategy:
       matrix:
-        node: [12,14,16]
+        node: [16,18,20]
     steps:
       - uses: actions/checkout@v2
 
