--- a/package.json
+++ b/package.json
@@ -24,12 +24,7 @@
   "bugs": {
     "url": "https://github.com/dudleycarr/nsqjs/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/dudleycarr/nsqjs/blob/master/LICENSE-MIT"
-    }
-  ],
+  "license": "MIT",
   "scripts": {
     "format": "prettier --write \"{lib,test}/**/*.js\"",
     "lint": "eslint lib test",
